# University_projects

./: README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml  mssql-docker-compose.yml
Algorithm design and analysis/Preparing/Algorithm desgin/: Brute Force - BackTracking - Branch & Bound.docx  Divide and Conquer.docx  Dynamic Program.docx  Greedy.docx
Algorithm design and analysis/Preparing/Complexity/: Ôn tập trước khi học.docx
Algorithm design and analysis/Preparing/Computational thinking/: Tư Duy máy Tính.docx
Algorithm design and analysis/Quizz/S1 Integer multiplication/: Ex01.cpp  Ex01_01.inp  Ex01_02.inp  Ex01_03.inp  Ex02.cpp  Ex03.cpp
Algorithm design and analysis/Quizz/Session 1 Integer multiplication/: Ex01.cpp  Ex02.cpp  Ex03.cpp  ex01_2.inp
Algorithm design and analysis/Quizz/Session_3 Merge And Sort/Ha Noi tower problem/MyCode And My test/: CMakeLists.txt  TowerOfHanoi.cpp  TowerOfHanoi.hpp  ex02.cpp  ex02_test.cpp
Algorithm design and analysis/Quizz/Session_4  Quick Sort/: CMakeLists.txt
DataBase/Preparing/: Data Base.docx  Data Modeling.docx  Database Normalization.docx  Relational Data Model - RDM.docx  SQL.docx  Transactions & Concurrency Control.docx
DataBase/session/: session_1.sql  session_2.sql
Graph Theory/: .~lock.Tổng quan.docx#  Learing Graph.txt  Tổng quan.docx
Introduction to Software Engineering - SE/Preparing/: Process Models.docx  Requirements Engineering.docx  SDLC - Software Development Life Cycle.docx  Software Testing & QA.docx  System Design & UML.docx
OS/: Lab04_CT104H.docx
(+216 files in other folders)
